# OLog

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  index.html  namespaceOLog.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  olog_8h_source.html
.github/workflows/: main.yml
docs/: Doxyfile
include/: olog.h
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  searchdata.js  variables_0.js
src/: olog.cpp
tests/: CMakeLists.txt  test_olog.cpp
